--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -8,6 +8,7 @@
   width: 100%;
   max-width: 100%;
   margin: 0;
+  padding: 0 16px;
 }
 
 @media (min-width: 1024px) {
